============================================================================
SUMMARY OF NEW FEATURES AND BUG FIXES SINCE V4.0
============================================================================

Version 6.3 - not yet released

Version 6.2.2 - not yet released
* calculations
  - fix instant L/D formula
  - fix malformed F records in IGC files
  - minor fix for FLARM stealth calculations
* user interface
  - fixed several minor bugs in the plane database dialog
  - fix MacCready steps for knots and ft/min
  - manual and translation updates
* Android
  - acquire "Vibrate" permission

Version 6.2.1 - 2011/09/26
* faster METAR and TAF download
* devices
  - FLARM: clear old barometric altitude as soon as FLARM is detected
* user interface
  - show validation errors before task declaration
* Windows / Altair
  - restore the "Enter" key in dialogs (knob click on Altair)
* Android
  - fix hang on quit
  - fix screen corruption when rotating the progress screen
  - fix startup crash with manual display orientation
  - fix memory leak in network code
  - implement timeout in network code
* Mac OS X
  - fix clock query
  - store data in ~/XCSoarData

Version 6.2 - 2011/09/08
* devices
  - Android IOIO
  - Android: support native serial ports and USB-RS232 adapters
  - added task declaration support for the IMI ERIXX logger
  - improved support for the Digifly Leonardo
  - auto-detect serial ports on Windows CE
  - serial port support on UNIX
  - CAI302: fix byte order bug on PC
  - CAI302: IGC file download
  - IMI ERIXX: IGC file download
  - LX/Colibri: IGC file download
  - LX: support baud rate switching
  - Volkslogger: fix task declaration on PC
  - Vega: update vario when there is no GPS fix
  - PosiGraph: task declaration
  - device declaration can be cancelled
  - reconnect individual devices after failure or timeout
  - device manager dialog, with manual reconnect
* calculations
  - dry mass is seperated from the polar reference mass